Adding programmatic constructs to simplify optimizing.